# spotichart

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_IMPROVEMENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ELITE_IMPROVEMENTS.md  ELITE_PACKAGE.md  GITHUB_PACKAGES.md  LICENSE  MANIFEST.in  Makefile  PROFESSIONAL_IMPROVEMENTS.md  README.md  SUMMARY.md  config.example.json  config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude/: settings.local.json
.github/: PUBLISHING_GUIDE.md
.github/workflows/: ci.yml  create-pr-from-feature.yml  create-release-pr.yml  create-release-tag.yml  docker.yml  package-info.yml  publish.yml
.hypothesis/constants/: 0542c30c0c2d6760  102ba342487319c7  13c5477a994b9b39  1623c87fd9cf6653  1e28e5db3b6ca26a  26dea2afba1cee1d  2996ecdd6975a542  2afa7a84b34dc66f  2b3f16a00dc96fdd  395e1759feb84a74  446e5c9887cc5450  4e1686782e985198  53b1f9a84bb53387  5f04aa7b1f6876ac  6c362290bc14443a  708a5b9dd15584ae  7b5b03f5f045d52a  853bc92db268cec9  8fd388afa8a6d652  91253f85e76011c0  9ea8a54c14809b9c  a01ed0756792ec00  a13251f9849ae9fe  a34ba31f07a55035  a430ffb80094cbf8  a7302d03eb77caa8  a7e12fdbb8a7adcb  ab5a6fb19d241422  b4780d97fca5483d  b9f180c31d2d03d4  ba3325bee7c6fb6b  c88b64cfb05c0cae  e1f961a6cead082c  e555bf85c42b48f5  e767b3bdc8440d99  ec3e61c40c20fa03  f0a46892f73de372  f1002f0038d8403f  f1c3fce04f8d9da2  f559d3104f7cc063  (+2 more)
.hypothesis/examples/04e6b3400353b141/: 11ec3a0ceeefbc36  125f8001d1ed57e4  208c71d83cc675fa  279b60f6f4d2102d  3f7672b52ee3f7ca  430b3686e5737eda  44d28beea1d85640  8488c4aa5f3cc54d  ba1d74154f9d394a  dcd9bae75128f47f
.hypothesis/examples/11ec3a0ceeefbc36/: 09b41bc8c4f199b8  209159efa6cde4cb  260905cb77f28f91  4b91517ee7d96b22  a5f9822d3bd5fd19  df4e9da22f2a0533
.hypothesis/examples/125f8001d1ed57e4/: f192608e006c71f7
.hypothesis/examples/208c71d83cc675fa/: 9fa5eb97d81ee2ad
.hypothesis/examples/279b60f6f4d2102d/: 84cd26e24c8e618e  c78f0dd9ddf4c09e  f1912cb01ff96842
.hypothesis/examples/3f7672b52ee3f7ca/: 2bac6b8b665014a5  30fb3b6997ab6095  36085c49248ba683  3ca7acea3718d52b  50e659cf80df3d10  8a60cf4200552f0b  9c90a9d8d27b36f6  9ddf21cff78e79f8  a0568fc7833678cb  afe13a439fed3c43  d794a2bdb0dd62f5  f01e78812be39dc2
.hypothesis/examples/430b3686e5737eda/: 67e57ef8761b78bb  6e3bfc73b6f84fe1  ca1ae54da00cfa65  cbe6a508d5fa1006
.hypothesis/examples/44d28beea1d85640/: 81c9048d410b94fc
.hypothesis/examples/8488c4aa5f3cc54d/: f4855485a079c939
.hypothesis/examples/ba1d74154f9d394a/: 037bda1c12b7d974  0dad9c32ae762312  1af9f1e652ff4578  2a70fa20af2001b2  353e9b3c65d1c07f  41d8d3a702acb3a6  45eb506652c8bdb4  4b59735e3fb2b327  559a6fc222cdbe86  58ed032d4c8ba85f  7f379a76e579e9e6  818b49ea3c6729c9  87610e9484aa00a0  992dfc23cac7b27c  a67a0b7533118457  (+8 more)
docs/: ARCHITECTURE.md  COMMANDS_CHEATSHEET.md  FINAL_REPORT.md  SOLID_GUIDE.md  TROUBLESHOOTING.md
src/spotichart/: __init__.py  config.py
templates/: index.html
tests/: README.md  __init__.py  conftest.py  test_application_dtos.py  test_application_events.py  test_application_handlers.py  test_application_imports.py  test_application_services.py  test_benchmarks.py  test_builders.py  test_chart_interfaces_coverage.py  test_configuration_provider.py  test_decorators.py  test_dependency_container.py  test_domain_imports.py  test_factory.py  test_http_client.py  test_infrastructure_decorators.py  test_interfaces.py  test_interfaces_coverage.py  test_kworb_parser.py  test_kworb_provider.py  test_logger.py  test_models.py  test_pipelines.py  test_playlist_cache.py  test_playlist_manager.py  test_plugins_and_events.py  test_property_based.py  test_pydantic_dtos.py  test_queries.py  test_query_handlers.py  test_repositories.py  test_result.py  test_scraper.py  test_specifications.py  test_spotify_authenticator.py  test_spotify_client.py  test_spotify_service.py  test_strategies.py  (+3 more)
tests/integration/: test_e2e_playlist_creation.py
(+50 files in other folders)
