[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotichart"
version = "2.0.0"
description = "Automatically create Spotify playlists from Kworb charts"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Operating System :: OS Independent",
]
keywords = ["spotify", "playlist", "kworb", "music", "charts"]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
    "spotipy>=2.23.0",
    "python-dotenv>=1.0.1",
    "unidecode>=1.3.8",
    "lxml>=5.1.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "urllib3<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.1.1",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pylint>=3.0.3",
    "isort>=5.13.2",
    "pre-commit>=3.6.0",
]
docs = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-click>=5.1.0",
]

[project.urls]
Homepage = "https://github.com/github_username/spotichart"
Documentation = "https://github.com/github_username/spotichart#readme"
Repository = "https://github.com/github_username/spotichart"
Issues = "https://github.com/github_username/spotichart/issues"

[project.scripts]
spotichart = "spotichart.cli.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["spotichart*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
# Strict mode - Maximum type safety
strict = true
python_version = "3.9"

# Strictness flags (enabled by strict=true, listed for documentation)
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true  # ✅ STRICT: All functions must have type hints
disallow_incomplete_defs = true  # ✅ STRICT: All function parameters must be typed
disallow_untyped_calls = true  # ✅ STRICT: Cannot call untyped functions
disallow_untyped_decorators = true  # ✅ STRICT: Decorators must be typed
disallow_any_generics = true  # ✅ STRICT: Generic types must be fully specified
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
strict_equality = true

# Additional quality checks
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "spotipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bs4.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=spotichart --cov-report=term-missing --cov-report=html"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
]

[tool.pylint.format]
max-line-length = 100
